src/log/build_2026-06-11_16-17-43/jetson_camera/stderr.log
  File "/home/jetson/Final_assignment/EmbeddedVisualControl/src/install/jetson_camera/lib/python3.8/site-packages/jetson_camera/algorithm_node.py", line 164
    break
    ^
SyntaxError: 'break' outside loop

